--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,13 @@
     --primaryFont: 'Open Sans', sans-serif;
     --secondaryFont: 'Roboto', cursive;
 
-    --primary: #3b4862;
+    --primary: hsl(220, 25%, 31%);
+    --primaryDarken: hsl(220, 25%, 21%);
+    --primaryLighten: hsl(220, 25%, 51%);
+    --primaryTransparent: rgba( 59 72 99 / 0.9 );
 
-    --black: #000;
+    --black: #000000;
+    --blackTransparent: rgba(0, 0, 0, 0.5);
     --white: #FFFFFF;
     --grey: #eeefed;
     --lightGrey: hsl(0, 0%, 97%);
@@ -56,10 +60,6 @@ h3 {
     font-size: 3rem;
 }
 
-[class$="heading"] {
-    margin: 2rem 0;
-}
-
 a {
     text-decoration: none;
     color: var(--black);
@@ -69,4 +69,127 @@ p {
     color: var(--black);
     font-size: 1.6rem;
     line-height: 1.8;
+}
+
+.conteiner {
+    width: 95%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.heading {
+    font-weight: 300;
+    margin-bottom: 2rem;
+}
+
+.heading span {
+    font-weight: 900;
+}
+
+.heading::after {
+    content: "";
+    display: block;
+    background-image: 
+        linear-gradient( to right, var(--primary) 0%, var(--primary) 50%, var(--primaryLighten) 50%, var(--primaryLighten) 100% );
+    width: 15rem;
+    height: 1rem;
+    margin-top: 1rem;
+}
+
+/* ==== Header ==== */
+
+.header {
+    background-image: 
+        linear-gradient( var(--primaryTransparent) 0, var(--primaryTransparent) 100% ),
+        url(../img/header_bg.jpg);
+    background-position: center center;
+    background-size: cover;
+
+    padding: 3rem 0;
+    position: relative;
+}
+
+@media (min-width: 768px) {
+    .header {
+        padding: 3rem 0 20rem;
+    }
+}
+
+.header-bar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4rem;
+}
+
+.header-bar img {
+    width: 25rem;
+}
+
+@media (min-width: 768px) {
+    .header-bar {
+        flex-direction: row;
+    }
+}
+
+.navbar {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin: 0 auto;
+}
+
+.navbar a {
+    text-align: center;
+    color: var(--white);
+    padding: 1rem;
+    font-size: 1.8rem;
+}
+
+@media (min-width: 768px) {
+    .navbar {
+        flex-direction: row;
+        justify-content: flex-end;
+        width: 100%;
+    }
+}
+
+.header-content h1 {
+    color: var(--white);
+    text-align: center;
+    margin: 2rem 0;
+}
+
+.header-content p {
+    display: none;
+}
+
+.header-content img {
+    display: none;
+}
+
+@media (min-width: 768px) {
+    .header-content {
+        margin-top: 10rem;
+        max-width: 50%;
+    }
+
+    .header-content h1 {
+        text-align: left;
+    }
+
+    .header-content p {
+        display: block;
+        color: var(--white);
+    }
+
+    .header-content img {
+        display: block;
+        width: 35rem;
+        position: absolute;
+        border-top-left-radius: 2rem;
+        border-bottom-left-radius: 4rem;
+        right: 0;
+        bottom: -5rem;
+    }
 }
