add featured section

--- a/css/styles.css
+++ b/css/styles.css
@@ -288,3 +288,84 @@ p {
 .property-info a:hover {
     background-color: var(--primaryDarken);
 }
+
+/* ==== featured ==== */
+
+.featured {
+    background-image: 
+        linear-gradient( to top, var(--primary) 0%, var(--primary) 50%, transparent 50%, transparent 100%),
+        url(../img/destacada.jpg);
+
+    background-repeat: no-repeat;
+    background-size: 100%, 110rem;
+    background-position: 70% 0%;
+}
+@media (min-width: 480px) {
+    .featured {
+        background-size: 100%, 80rem;
+    }
+}
+@media (min-width: 768px) {
+    .featured {
+        background-image: 
+            linear-gradient( to left, var(--primary) 0%, var(--primary) 50%, transparent 50%, transparent 100%),
+            url(../img/destacada.jpg);
+
+        background-size: 100%, 100%;
+        background-position: center, -40rem center;
+    }
+}
+
+.featured-grid {
+    display: grid;
+    grid-template-rows: repeat( 2, 1fr );
+}
+
+.featured-content {
+    padding: 5rem;
+    grid-row: 2 / 3;
+}
+
+@media (min-width: 768px) {
+    .featured-grid {
+        grid-template-rows: unset;
+        grid-template-columns: repeat( 2, 1fr );
+    }
+
+    .featured-content {
+        padding: 8rem;
+        grid-column: 2 / 3;
+    }
+}
+
+.featured-content > * {
+    color: var(--white);
+}
+
+.featured-content p {
+    font-size: 1.8rem;
+}
+
+.featured-content p {
+    font-size: 1.8rem;
+}
+
+.featured-content .price {
+    font-size: 2.4rem;
+    font-weight: 700;
+}
+
+.featured-content a {
+    display: block;
+    background-color: var(--white);
+    color: var(--primary);
+    padding: 1.5rem 4rem;
+    font-size: 2rem;
+    font-weight: 700;
+    text-align: center;
+}
+
+.featured-content a:hover {
+    background-color: var(--primaryLighten);
+    color: var(--white);
+}
