--- a/css/styles.css
+++ b/css/styles.css
@@ -453,3 +453,91 @@ p {
 .post a:hover {
     background-color: var(--primaryDarken);
 }
+
+/* ==== footer ==== */
+
+.footer {
+    background-color: var(--primary);
+    padding-top: 5rem;
+}
+
+@media (min-width: 768px) {
+    .footer-grid {
+        display: grid;
+        grid-template-columns: repeat( 3, 1fr );
+    }
+}
+
+/* ==== footer - footer-nav ==== */
+
+.footer-nav {
+    margin-bottom: 4rem;
+    text-align: center;
+}
+
+.footer-nav h3 {
+    color: var(--white);
+    margin-bottom: 2rem;
+}
+
+.footer-nav nav {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.footer-nav a {
+    color: var(--white);
+    font-size: 1.8rem;
+    padding: 1rem 0;
+}
+
+@media (min-width: 768px) {
+
+    .footer-nav h3 {
+        text-align: left;
+    }
+
+    .footer-nav nav {
+        text-align: left;
+        gap: 0;
+    }
+}
+
+/* ==== footer - footer-us ==== */
+
+.footer-us {
+    margin-bottom: 4rem;
+    text-align: center;
+}
+
+.footer-us h3 {
+    color: var(--white);
+}
+
+.footer-us p {
+    color: var(--white);
+    line-height: 2;
+}
+
+@media (min-width: 768px) {
+    
+    .footer-us {
+        text-align: left;
+    }
+}
+
+/* ==== footer - footer-img ==== */
+
+.footer-img {
+    width: 80%;
+    margin: 2rem auto;
+}
+
+.copyright {
+    background-color: var(--primaryDarken);
+    color: var(--white);
+    margin: 0;
+    padding: 2rem;
+    text-align: center;
+}
