--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,543 +1,580 @@
-:root { 
-    --primaryFont: 'Open Sans', sans-serif;
-    --secondaryFont: 'Roboto', cursive;
+:root {
+  --primaryFont: "Open Sans", sans-serif;
+  --secondaryFont: "Roboto", cursive;
 
-    --primary: hsl(220, 25%, 31%);
-    --primaryDarken: hsl(220, 25%, 21%);
-    --primaryLighten: hsl(220, 25%, 51%);
-    --primaryTransparent: rgba( 59 72 99 / 0.9 );
+  --primary: hsl(220, 25%, 31%);
+  --primaryDarken: hsl(220, 25%, 21%);
+  --primaryLighten: hsl(220, 25%, 51%);
+  --primaryTransparent: rgba(59 72 99 / 0.9);
 
-    --black: #000000;
-    --blackTransparent: rgba(0, 0, 0, 0.5);
-    --white: #FFFFFF;
-    --grey: #eeefed;
-    --lightGrey: hsl(0, 0%, 97%);
-    --lightGrey-2: hsl(0, 0%, 94%);
+  --black: #000000;
+  --blackTransparent: rgba(0, 0, 0, 0.5);
+  --white: #ffffff;
+  --grey: #eeefed;
+  --lightGrey: hsl(0, 0%, 97%);
+  --lightGrey-2: hsl(0, 0%, 94%);
 }
 
 html {
-    font-size: 62.5%;
-    box-sizing: border-box;
+  font-size: 62.5%;
+  box-sizing: border-box;
 }
 
-*, *:before, *:after {
-    box-sizing: inherit;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
-  
+
 body {
-    font-family: var(--primaryFont);
-    font-size: 1.6rem;
-    background-color: var(--lightGrey-2);
+  font-family: var(--primaryFont);
+  font-size: 1.6rem;
+  background-color: var(--lightGrey-2);
 }
 
 img {
-    max-width: 100%;
-    display: block;
+  max-width: 100%;
+  display: block;
 }
 
 ul {
-    padding:0;
-    list-style: none;
-    margin: 0;
+  padding: 0;
+  list-style: none;
+  margin: 0;
 }
 
-h1, h2, h3 {
-    margin: 0;
-    line-height: 1.2;
+h1,
+h2,
+h3 {
+  margin: 0;
+  line-height: 1.2;
 }
 
 h1 {
-    font-size: 4.4rem;
-    font-family: var(--secondaryFont);
+  font-size: 4.4rem;
+  font-family: var(--secondaryFont);
 }
 
 h2 {
-    font-size: 4rem;
-    font-family: var(--secondaryFont);
+  font-size: 4rem;
+  font-family: var(--secondaryFont);
 }
 
 h3 {
-    font-size: 3rem;
+  font-size: 3rem;
 }
 
 a {
-    text-decoration: none;
-    color: var(--black);
+  text-decoration: none;
+  color: var(--black);
 }
 
 p {
-    color: var(--black);
-    font-size: 1.6rem;
-    line-height: 1.8;
+  color: var(--black);
+  font-size: 1.6rem;
+  line-height: 1.8;
 }
 
 .conteiner {
-    width: 95%;
-    max-width: 1200px;
-    margin: 0 auto;
+  width: 95%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .heading {
-    font-weight: 300;
-    margin-bottom: 2rem;
+  font-weight: 300;
+  margin-bottom: 2rem;
 }
 
 .heading span {
-    font-weight: 900;
+  font-weight: 900;
 }
 
 .heading::after {
-    content: "";
-    display: block;
-    background-image: 
-        linear-gradient( to right, var(--primary) 0%, var(--primary) 50%, var(--primaryLighten) 50%, var(--primaryLighten) 100% );
-    width: 15rem;
-    height: 1rem;
-    margin-top: 1rem;
+  content: "";
+  display: block;
+  background-image: linear-gradient(
+    to right,
+    var(--primary) 0%,
+    var(--primary) 50%,
+    var(--primaryLighten) 50%,
+    var(--primaryLighten) 100%
+  );
+  width: 15rem;
+  height: 1rem;
+  margin-top: 1rem;
 }
 
 /* ==== Header ==== */
 
 .header {
-    background-image: 
-        linear-gradient( var(--primaryTransparent) 0, var(--primaryTransparent) 100% ),
-        url(../img/header_bg.jpg);
-    background-position: center center;
-    background-size: cover;
+  background-image: linear-gradient(
+      var(--primaryTransparent) 0,
+      var(--primaryTransparent) 100%
+    ),
+    url(../img/header_bg.jpg);
+  background-position: center center;
+  background-size: cover;
 
-    padding: 3rem 0;
-    position: relative;
+  padding: 3rem 0;
+  position: relative;
 }
 
 @media (min-width: 768px) {
-    .header {
-        padding: 3rem 0 20rem;
-    }
+  .header {
+    padding: 3rem 0 20rem;
+  }
 }
 
 .header-bar {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4rem;
 }
 
 .header-bar img {
-    width: 25rem;
+  width: 25rem;
 }
 
 @media (min-width: 768px) {
-    .header-bar {
-        flex-direction: row;
-    }
+  .header-bar {
+    flex-direction: row;
+  }
 }
 
 .navbar {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin: 0 auto;
 }
 
 .navbar a {
-    text-align: center;
-    color: var(--white);
-    padding: 1rem;
-    font-size: 1.8rem;
+  text-align: center;
+  color: var(--white);
+  padding: 1rem;
+  font-size: 1.8rem;
 }
 
 @media (min-width: 768px) {
-    .navbar {
-        flex-direction: row;
-        justify-content: flex-end;
-        width: 100%;
-    }
+  .navbar {
+    flex-direction: row;
+    justify-content: flex-end;
+    width: 100%;
+  }
 }
 
 .header-content h1 {
-    color: var(--white);
-    text-align: center;
-    margin: 2rem 0;
+  color: var(--white);
+  text-align: center;
+  margin: 2rem 0;
 }
 
 .header-content p {
-    display: none;
+  display: none;
 }
 
 .header-content img {
-    display: none;
+  display: none;
 }
 
 @media (min-width: 768px) {
-    .header-content {
-        margin-top: 10rem;
-        max-width: 50%;
-    }
+  .header-content {
+    margin-top: 10rem;
+    max-width: 50%;
+  }
 
-    .header-content h1 {
-        text-align: left;
-    }
+  .header-content h1 {
+    text-align: left;
+  }
 
-    .header-content p {
-        display: block;
-        color: var(--white);
-    }
+  .header-content p {
+    display: block;
+    color: var(--white);
+  }
 
-    .header-content img {
-        display: block;
-        width: 35rem;
-        position: absolute;
-        border-top-left-radius: 2rem;
-        border-bottom-left-radius: 4rem;
-        right: 0;
-        bottom: -5rem;
-    }
+  .header-content img {
+    display: block;
+    width: 35rem;
+    position: absolute;
+    border-top-left-radius: 2rem;
+    border-bottom-left-radius: 4rem;
+    right: 0;
+    bottom: -5rem;
+  }
 }
 
 /* ==== properties ==== */
 
 .properties {
-    padding: 5rem 0;
+  padding: 5rem 0;
 }
 
 @media (min-width: 768px) {
-    .properties-list {
-        display: grid;
-        grid-template-columns: repeat( 3, 1fr );
-        gap: 2rem;
-    }
+  .properties-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+  }
 }
 
 .property {
-    background-color: var(--white);
+  background-color: var(--white);
 }
 
 .property:nth-child(1) .property-img {
-    background-image: 
-        linear-gradient( to bottom, var(--blackTransparent) 0%, var(--blackTransparent) 100%),
-        url(../img/propiedad_1.jpg);  
+  background-image: linear-gradient(
+      to bottom,
+      var(--blackTransparent) 0%,
+      var(--blackTransparent) 100%
+    ),
+    url(../img/propiedad_1.jpg);
 }
 
 .property:nth-child(2) .property-img {
-    background-image: 
-        linear-gradient( to bottom, var(--blackTransparent) 0%, var(--blackTransparent) 100%),
-        url(../img/propiedad_2.jpg);
+  background-image: linear-gradient(
+      to bottom,
+      var(--blackTransparent) 0%,
+      var(--blackTransparent) 100%
+    ),
+    url(../img/propiedad_2.jpg);
 }
 
 .property:nth-child(3) .property-img {
-    background-image: 
-        linear-gradient( to bottom, var(--blackTransparent) 0%, var(--blackTransparent) 100%),
-        url(../img/propiedad_3.jpg);
+  background-image: linear-gradient(
+      to bottom,
+      var(--blackTransparent) 0%,
+      var(--blackTransparent) 100%
+    ),
+    url(../img/propiedad_3.jpg);
 }
 
 .property:nth-child(4) .property-img {
-    background-image: 
-        linear-gradient( to bottom, var(--blackTransparent) 0%, var(--blackTransparent) 100%),
-        url(../img/propiedad_4.jpg);
+  background-image: linear-gradient(
+      to bottom,
+      var(--blackTransparent) 0%,
+      var(--blackTransparent) 100%
+    ),
+    url(../img/propiedad_4.jpg);
 }
 
 .property:nth-child(5) .property-img {
-    background-image: 
-        linear-gradient( to bottom, var(--blackTransparent) 0%, var(--blackTransparent) 100%),
-        url(../img/propiedad_5.jpg);
+  background-image: linear-gradient(
+      to bottom,
+      var(--blackTransparent) 0%,
+      var(--blackTransparent) 100%
+    ),
+    url(../img/propiedad_5.jpg);
 }
 
 .property:nth-child(6) .property-img {
-    background-image: 
-        linear-gradient( to bottom, var(--blackTransparent) 0%, var(--blackTransparent) 100%),
-        url(../img/propiedad_6.jpg);
+  background-image: linear-gradient(
+      to bottom,
+      var(--blackTransparent) 0%,
+      var(--blackTransparent) 100%
+    ),
+    url(../img/propiedad_6.jpg);
 }
 
 .property-img {
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    aspect-ratio: 10/6;
-    position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  aspect-ratio: 10/6;
+  position: relative;
 }
 
 .property-img h3 {
-    color:var(--white);
-    font-size: 2.4rem;
-    bottom: 1rem;
-    left: 1rem;
-    position: absolute;
+  color: var(--white);
+  font-size: 2.4rem;
+  bottom: 1rem;
+  left: 1rem;
+  position: absolute;
 }
 
 .property-info {
-    padding: 2rem;
+  padding: 2rem;
 }
 
 .property-info .price {
-    font-size: 3rem;
-    margin: 0 0 2rem 0;
+  font-size: 3rem;
+  margin: 0 0 2rem 0;
 }
 
 .property-info a {
-    display: block;
-    background-color: var(--primary);
-    color: var(--white);
-    padding: 1.5rem 4rem;
-    font-size: 2rem;
-    font-weight: 700;
-    text-align: center;
-    transition-duration: .3s;
-    transition-property: background-color;
+  display: block;
+  background-color: var(--primary);
+  color: var(--white);
+  padding: 1.5rem 4rem;
+  font-size: 2rem;
+  font-weight: 700;
+  text-align: center;
+  transition-duration: 0.3s;
+  transition-property: background-color;
 }
 
 .property-info a:hover {
-    background-color: var(--primaryDarken);
+  background-color: var(--primaryDarken);
 }
 
 /* ==== featured ==== */
 
 .featured {
-    background-image: 
-        linear-gradient( to top, var(--primary) 0%, var(--primary) 50%, transparent 50%, transparent 100%),
-        url(../img/destacada.jpg);
+  background-image: linear-gradient(
+      to top,
+      var(--primary) 0%,
+      var(--primary) 50%,
+      transparent 50%,
+      transparent 100%
+    ),
+    url(../img/destacada.jpg);
 
-    background-repeat: no-repeat;
-    background-size: 100%, 110rem;
-    background-position: 70% 0%;
+  background-repeat: no-repeat;
+  background-size: 100%, 110rem;
+  background-position: 70% 0%;
 }
 @media (min-width: 480px) {
-    .featured {
-        background-size: 100%, 80rem;
-    }
+  .featured {
+    background-size: 100%, 80rem;
+  }
 }
 @media (min-width: 768px) {
-    .featured {
-        background-image: 
-            linear-gradient( to left, var(--primary) 0%, var(--primary) 50%, transparent 50%, transparent 100%),
-            url(../img/destacada.jpg);
+  .featured {
+    background-image: linear-gradient(
+        to left,
+        var(--primary) 0%,
+        var(--primary) 50%,
+        transparent 50%,
+        transparent 100%
+      ),
+      url(../img/destacada.jpg);
 
-        background-size: 100%, 100%;
-        background-position: center, -40rem center;
-    }
+    background-size: 100%, 100%;
+    background-position: center, -40rem center;
+  }
 }
 
 .featured-grid {
-    display: grid;
-    grid-template-rows: repeat( 2, 1fr );
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
 }
 
 .featured-content {
-    padding: 5rem;
-    grid-row: 2 / 3;
+  padding: 5rem;
+  grid-row: 2 / 3;
 }
 
 @media (min-width: 768px) {
-    .featured-grid {
-        grid-template-rows: unset;
-        grid-template-columns: repeat( 2, 1fr );
-    }
+  .featured-grid {
+    grid-template-rows: unset;
+    grid-template-columns: repeat(2, 1fr);
+  }
 
-    .featured-content {
-        padding: 8rem;
-        grid-column: 2 / 3;
-    }
+  .featured-content {
+    padding: 8rem;
+    grid-column: 2 / 3;
+  }
 }
 
 .featured-content > * {
-    color: var(--white);
+  color: var(--white);
 }
 
 .featured-content p {
-    font-size: 1.8rem;
+  font-size: 1.8rem;
 }
 
 .featured-content p {
-    font-size: 1.8rem;
+  font-size: 1.8rem;
 }
 
 .featured-content .price {
-    font-size: 2.4rem;
-    font-weight: 700;
+  font-size: 2.4rem;
+  font-weight: 700;
 }
 
 .featured-content a {
-    display: block;
-    background-color: var(--white);
-    color: var(--primary);
-    padding: 1.5rem 4rem;
-    font-size: 2rem;
-    font-weight: 700;
-    text-align: center;
+  display: block;
+  background-color: var(--white);
+  color: var(--primary);
+  padding: 1.5rem 4rem;
+  font-size: 2rem;
+  font-weight: 700;
+  text-align: center;
 }
 
 .featured-content a:hover {
-    background-color: var(--primaryLighten);
-    color: var(--white);
+  background-color: var(--primaryLighten);
+  color: var(--white);
 }
 
 /* ==== testimonials-blog ==== */
 
 .testimonials-blog {
-    padding: 5rem 0;
+  padding: 5rem 0;
 }
 
 @media (min-width: 768px) {
-    .testimonials-blog {
-        display: grid;
-        grid-template-columns: 1fr 2fr;
-        gap: 5rem;
-    }
+  .testimonials-blog {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 5rem;
+  }
 }
 
 /* ==== testimonials ==== */
 
 .testimonials-content {
-    padding: 0 2rem 2rem 2rem;
+  padding: 0 2rem 2rem 2rem;
 }
 
 .testimonials-name {
-    font-size: 2.4rem;
-    font-weight: 700;
+  font-size: 2.4rem;
+  font-weight: 700;
 }
 
 .testimonials-text::before {
-    background-image: url(../img/quote.svg);
-    background-position: 50%;
-    background-repeat: no-repeat;
-    content: "";
-    display: inline-block;
-    height: 4rem;
-    margin-right: 1rem;
-    width: 4rem;
+  background-image: url(../img/quote.svg);
+  background-position: 50%;
+  background-repeat: no-repeat;
+  content: "";
+  display: inline-block;
+  height: 4rem;
+  margin-right: 1rem;
+  width: 4rem;
 }
 
 /* ==== blog ==== */
 
 .post {
-    margin-bottom: 5rem;
+  margin-bottom: 5rem;
 }
 
 @media (min-width: 768px) {
-    .post {
-        display: grid;
-        grid-template-columns: 2fr 3.5fr;
-        align-items: center;
-        gap: 2rem;
-    }
+  .post {
+    display: grid;
+    grid-template-columns: 2fr 3.5fr;
+    align-items: center;
+    gap: 2rem;
+  }
 
-    .post-img {
-        height: 30rem;
-    }
+  .post-img {
+    height: 30rem;
+  }
 
-    .post-img img{
-        height: 100%;
-        object-fit: cover;
-    }
+  .post-img img {
+    height: 100%;
+    object-fit: cover;
+  }
 }
 
 .post-info {
-    padding: 1rem;
+  padding: 1rem;
 }
 
 .meta {
-    font-size: 1.4rem;
+  font-size: 1.4rem;
 }
 
 .post a {
-    display: block;
-    background-color: var(--primary);
-    color: var(--white);
-    padding: 1.5rem 4rem;
-    font-size: 2rem;
-    font-weight: 700;
-    text-align: center;
-    transition-duration: .3s;
-    transition-property: background-color;
+  display: block;
+  background-color: var(--primary);
+  color: var(--white);
+  padding: 1.5rem 4rem;
+  font-size: 2rem;
+  font-weight: 700;
+  text-align: center;
+  transition-duration: 0.3s;
+  transition-property: background-color;
 }
 
 .post a:hover {
-    background-color: var(--primaryDarken);
+  background-color: var(--primaryDarken);
 }
 
 /* ==== footer ==== */
 
 .footer {
-    background-color: var(--primary);
-    padding-top: 5rem;
+  background-color: var(--primary);
+  padding-top: 5rem;
 }
 
 @media (min-width: 768px) {
-    .footer-grid {
-        display: grid;
-        grid-template-columns: repeat( 3, 1fr );
-    }
+  .footer-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 /* ==== footer - footer-nav ==== */
 
 .footer-nav {
-    margin-bottom: 4rem;
-    text-align: center;
+  margin-bottom: 4rem;
+  text-align: center;
 }
 
 .footer-nav h3 {
-    color: var(--white);
-    margin-bottom: 2rem;
+  color: var(--white);
+  margin-bottom: 2rem;
 }
 
 .footer-nav nav {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .footer-nav a {
-    color: var(--white);
-    font-size: 1.8rem;
-    padding: 1rem 0;
+  color: var(--white);
+  font-size: 1.8rem;
+  padding: 1rem 0;
 }
 
 @media (min-width: 768px) {
+  .footer-nav h3 {
+    text-align: left;
+  }
 
-    .footer-nav h3 {
-        text-align: left;
-    }
-
-    .footer-nav nav {
-        text-align: left;
-        gap: 0;
-    }
+  .footer-nav nav {
+    text-align: left;
+    gap: 0;
+  }
 }
 
 /* ==== footer - footer-us ==== */
 
 .footer-us {
-    margin-bottom: 4rem;
-    text-align: center;
+  margin-bottom: 4rem;
+  text-align: center;
 }
 
 .footer-us h3 {
-    color: var(--white);
+  color: var(--white);
 }
 
 .footer-us p {
-    color: var(--white);
-    line-height: 2;
+  color: var(--white);
+  line-height: 2;
 }
 
 @media (min-width: 768px) {
-    
-    .footer-us {
-        text-align: left;
-    }
+  .footer-us {
+    text-align: left;
+  }
 }
 
 /* ==== footer - footer-img ==== */
 
 .footer-img {
-    width: 80%;
-    margin: 2rem auto;
+  width: 80%;
+  margin: 2rem auto;
 }
 
 .copyright {
-    background-color: var(--primaryDarken);
-    color: var(--white);
-    margin: 0;
-    padding: 2rem;
-    text-align: center;
+  background-color: var(--primaryDarken);
+  color: var(--white);
+  margin: 0;
+  padding: 2rem;
+  text-align: center;
 }
